upstreamMetadata/force-app/main/default/objects/Rating__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many stars is the customer rating?</description>
    <label>Stars</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>