upstreamMetadata/force-app/main/default/objects/Rating__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of this rating</description>
    <label>Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>