upstreamMetadata/force-app/main/default/objects/Rating__c/validationRules/Stars_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Stars_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Stars__c &lt; 1 &amp;&amp; Stars__c &gt; 5</errorConditionFormula>
    <errorDisplayField>Stars__c</errorDisplayField>
    <errorMessage>Stars should be an integer between 1 and 5 inclusively</errorMessage>
</ValidationRule>